# bigquery-python-tutorial

./: .env.example  .gitignore  Makefile  Pipfile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
bigquery_python_tutorial/: __init__.py  insert.py  storage.py  tables.py
bigquery_python_tutorial/clients/: __init__.py  google_bigquery.py  google_cloud_storage.py  log.py
data/: employees.csv
